Fixed: Left alignment of the title to match the site

--- a/site-sass/site-specific/site.header.scss
+++ b/site-sass/site-specific/site.header.scss
@@ -48,7 +48,7 @@ header {
 		width: 100%;
 		flex-direction: column;
 		height: auto;
-		padding: 10px
+		padding: 10px 30px;
 	}
 }
 
@@ -56,6 +56,7 @@ header {
 	align-self: center;
 	width: 230px;
 	@include mq($until:tablet) {
+		align-self: flex-start;
 		/*margin: 0 auto;*/
 		padding: 10px 0;
 	}
@@ -64,7 +65,7 @@ header {
 .site-title_container {
 	align-self: center;
 	@include mq($until:tablet) {
-		margin: 0 auto;
+		align-self: flex-start;
 		padding: 10px 0;
 	}
 }
